# gerrit-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
gerrit-api/: Cargo.toml
gerrit-api/src/: changes.rs  client.rs  error.rs  lib.rs  projects.rs  query.rs  types.rs
gerrit-cli/: Cargo.toml
gerrit-cli/src/: app.rs  config.rs  git.rs  main.rs  output.rs
gerrit-cli/src/commands/: abandon.rs  checkout.rs  clone.rs  comments.rs  config.rs  install_hooks.rs  ls.rs  mod.rs  projects.rs  push.rs  review.rs  show.rs  submit.rs
