[package]
name = "gerrit-api"
version = "0.1.0"
edition = "2021"
description = "Pure Rust client library for the Gerrit Code Review REST API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
base64 = "0.22"
